[project]
name = "tinygpu"
version = "1.0.0"
description = "TinyGPU - a minimal educational GPU simulator (SIMT) with visualizations and examples."
readme = "README.md"
authors = [
  { name="DIneth Hettiarachchi", email="dnethusahan.h05@gmail.com" }
]
license = "MIT"
requires-python = ">=3.8"
keywords = ["gpu", "simulator", "education", "visualization", "simt"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/deaneeth/tinygpu"
"Repository" = "https://github.com/deaneeth/tinygpu"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.dependencies]
numpy = "^1.25"
matplotlib = "^3.7"
imageio = "^2.26"
# add pytest for dev, don't include in runtime
