[project]
name = "tinygpu"
version = "1.0.0"
description = "A tiny educational GPU simulator for learning SIMT architecture, branching, and synchronization."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Dineth Hettiarachchi", email = "hettiarachchidineth00@gmail.com" }
]

dependencies = [
  "numpy>=1.25",
  "matplotlib>=3.7",
  "imageio>=2.26"
]

[project.urls]
Homepage = "https://github.com/your-github-user/tinygpu"
Repository = "https://github.com/your-github-user/tinygpu"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
