[project]
name = "tinygpu"
version = "1.0.0"
description = "A tiny educational GPU simulator for learning SIMT architecture, branching, and synchronization."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Dineth Hettiarachchi", email = "hettiarachchidineth00@gmail.com" }
]

dependencies = [
  "numpy>=1.25",
  "matplotlib>=3.7",
  "imageio>=2.26"
]

[project.urls]
Homepage = "https://github.com/deaneeth/tinygpu"
Repository = "https://github.com/deaneeth/tinygpu"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  # Ruff is not included here due to compatibility issues with Python 3.13. Install separately if needed.
  "black>=24.10",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C", "Q", "B", "A"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
